Add PPL take(field, n) aggregate as a Rust DataFusion UDAF.
This includes UDAF in datafusion, YAML update for substrait signature,
Function declaration in AggregateFunction, substrait routing,
backnd declaration.

Also includes a change in AggregateCallAnnotation to move to using a map on OpenSearchAggregate instead of rex list.

Signed-off-by: Marc Handalian <marc.handalian@gmail.com>